--- a/Projeto CSS3 Avançado/CSS/estilo.css
+++ b/Projeto CSS3 Avançado/CSS/estilo.css
@@ -194,14 +194,14 @@ ul #atual a {
 
 /************************************
 Layouts */
-
+/*
 body {
     font-family: "Trebuchet MS", Helvetica, sans-serif ;
     background: #f2f2f2;
 }
 
 #container {
-    width: 960px;/*85%*/
+    width: 960px;
     margin: 0 auto;
     background: #fff url(../imagens/coluna.png) repeat-y left top;
     min-width: 720px;
@@ -267,4 +267,141 @@ img.img-noticia {
     clear: both;
     background: #c4c4c4;
     padding: 5px;
+}
+
+/************************************
+Estilizando tabelas
+body {
+    font-family: "Trebuchet MS", Helvetica, sans-serif; 
+}
+
+table {
+    width: 600px;
+    border-collapse: separate;
+}
+
+th, td {
+    padding: 7px;
+}
+
+th {
+    text-transform: uppercase;
+    border-top: 1px solid #999;
+    border-bottom: 1px solid #111;
+    text-align: left;
+    font-size: 90%;
+    letter-spacing: 0.1em;
+}
+
+tr.alternado {
+    background-color: #efefef;
+}
+
+tr:hover {
+    background-color: #c3e6e5;
+}
+
+.numero {
+    text-align: right;
+}*/
+
+/************************************
+Estilizando formulários */
+/*
+body {
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+}
+
+fieldset {
+    margin: 1em 0;
+    padding: 1em;
+    border: 1px solid #ccc;
+    background: #f8f8f8;
+}
+
+legend {
+    font-weight: bold;
+}
+
+label {
+    display: block;
+    cursor: pointer;
+}
+
+input {
+    width: 20em;
+}
+
+textarea {
+    width: 20em;
+    height: 10em;
+}
+
+input.radio, input.checkbox, input.submit {
+    width: auto;
+}
+
+.radio {
+    margin-right: 1em;
+}*/
+
+/************************************
+Estilizando formulários 2 */
+
+body {
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    background: #643d87 url(../imagens/fundo.jpg) no-repeat top center;
+}
+
+#container {
+    width: 400px;
+    height: 300px;
+    background-color: rgba(255, 255, 255, 0.3);
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    margin: 0 auto;
+    margin-top: 120px;
+    text-align: center;
+}
+
+#container img {
+    width: 120px;
+    height: 120px;
+    margin-top: -60px;
+    margin-bottom: 30px;
+}
+
+input {
+    height: 40px;
+    width: 80%;
+    font-size: 18px;
+    margin-bottom: 10px;
+    background-color: #fff;
+    padding-left: 40px;
+    border: none;
+    background-repeat: no-repeat;
+    background-position: 10px;
+}
+
+input.email {
+    background-image: url(../imagens/icone-usuario.png);
+}
+
+input.senha {
+    background-image: url(../imagens/icone-cadeado.png);
+}
+
+input.submit {
+    color: #fff;
+    background-color: #f79300;
+    border: 2px solid #db7d00;
+    padding: 5px 20px;
+    height: 45px;
+    width: 90%;
+
+    background: -webkit-linear-gradient(to bottom, #faa600, #f68a00);
+    background: -moz-linear-gradient(to bottom, #faa600, #f68a00);
+    background: -o-linear-gradient(to bottom, #faa600, #f68a00);
+    background: linear-gradient(to bottom, #faa600, #f68a00);
 }
